--- a/Tsltn/App.xaml
+++ b/Tsltn/App.xaml
@@ -10,10 +10,12 @@
 
             </ResourceDictionary.MergedDictionaries>
 
-            <Style TargetType="Window">
+            
+
+            <Style x:Key="StdButton" TargetType="Button">
                 <Style.Setters>
-                    <Setter Property="FontSize" Value="16"/>
-                    <Setter Property="TextOptions.TextFormattingMode" Value="Display"/>
+                    <Setter Property="Padding" Value="7,2,7,2"/>
+                    <Setter Property="MinWidth" Value="90"/>
                 </Style.Setters>
             </Style>
 
