--- a/Tsltn/UnusedTranslationUserControl.xaml
+++ b/Tsltn/UnusedTranslationUserControl.xaml
@@ -6,19 +6,19 @@
              xmlns:local="clr-namespace:Tsltn"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
-             BorderBrush="Black" BorderThickness="1" Padding="5"
+             Padding="10"
             DataContext="{Binding RelativeSource={RelativeSource Self}}"
              FontSize="16"
-              TextOptions.TextFormattingMode="Display">
+              TextOptions.TextFormattingMode="Ideal">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="90"/>
+            <ColumnDefinition Width="60"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <CheckBox HorizontalAlignment="Center" VerticalAlignment="Top" IsChecked="{Binding Remove, Mode=TwoWay}"/>
-        <TextBlock Grid.Column="1" TextAlignment="Justify" Text="{Binding Kvp.Value}" TextWrapping="WrapWithOverflow"/>
+        <CheckBox Name="_cbSelected" HorizontalAlignment="Center" VerticalAlignment="Top" IsChecked="{Binding Remove, Mode=TwoWay}" FontSize="16" Margin="0,4,0,0"/>
+        <TextBlock Grid.Column="1" TextAlignment="Justify" Text="{Binding Kvp.Value}" TextWrapping="WrapWithOverflow" Margin="0" Padding="0" VerticalAlignment="Top"/>
     </Grid>
 </UserControl>
